fix bytebuddy compatibility with java 25